apps/landingpage: fix usp blocks height on mobile (#3083)

--- a/adhocracy-plus/assets/scss/components/landing_page_usp_blocks.scss
+++ b/adhocracy-plus/assets/scss/components/landing_page_usp_blocks.scss
@@ -141,6 +141,10 @@
         margin: 1rem;
     }
 
+    .lp-block {
+        min-height: 300px;
+    }
+
     .lp-text-blocks {
         grid-template-columns: 1fr;
         grid-template-rows: auto auto;
